--- a/oduller/sayfa.html
+++ b/oduller/sayfa.html
@@ -13,26 +13,51 @@
 </head>
 
 <body>
-  <div id="odnav" class="nav">
+  <div id="onav" class="nav">
     <h2><a href="/">KimlikDAO</a></h2>
     <birim:cüzdan />
   </div>
   <div id="odpc">
     <div id="ods0c" class="odstep">
       <b data-en="Connect Wallet">Cüzdan Bağla</b>
-      <span data-en="Connect Wallet" data-phantom>Metamask, Rabby veya Brave tarayıcı cüzdanı.</span>
+      <span data-en="MetaMask, Rabby or Brave Browser wallet" data-phantom>MetaMask, Rabby veya Brave tarayıcı
+        cüzdanı.</span>
       <br>
       <br>
       <a href="javascript:" id="ods0b" class="act btn" data-en="Connect Wallet">Cüzdan Bağla</a>
     </div>
-    <div id="ods1ac" class="odstep">
+    <div id="ods1ac" class="odstep" style="display:none">
       <b data-en="TCKT">TCKT</b>
-      <span data-en="" data-phantom>Kampanyaya katılabilmen için TCKT sahibi olman gerekli.</span>
+      <span data-en="Checking your TCKT" data-phantom>TCKT bilgilerinizi kontrol edelim.</span>
       <br>
       <br>
-      <a href="/al" id="ods0o" class="act btn" data-en="Connect Wallet">TCKT al</a>
+      <a href="javascript:" id=ods1ab class="act btn lft" data-en="Request Decryption">Cüzdanıma İstek Yolla</a>
     </div>
-    
+    <div id="ods1bc" class="odstep" style="display:none">
+      <b data-en="TCKT">TCKT</b>
+      <span data-en="You must have TCKT in order to join" data-phantom>Kampanyaya katılabilmen için TCKT sahibi
+        olman gerekli.</span>
+      <br>
+      <br>
+      <a href="/al" data-en-href="/get" id=ods1bb class="act btn lft" data-en="Get TCKT">TCKT al</a>
+    </div>
+    <div id="ods2ac" class="odstep" style="display:none">
+      <b data-en="Register">Kayıt</b>
+      <span data-en="Congratulations! You can check the details ⬇" data-phantom>Tebrikler! Detayları inceleyebilirsin
+        ⬇</span>
+      <br>
+      <br>
+      <div id="odtx">Detaylar</div>
+      <a href="/" id=ods2ab class="act btn lft" data-en="HomePage">Ana Sayfaya dön</a>
+    </div>
+    <div id="ods2bc" class="odstep" style="display:none">
+      <b data-en="Register">Kayıt</b>
+      <span data-en="You have participated in the campaign before 👍" data-phantom>Kampanyaya daha önce katılmışsınız
+        👍</span>
+      <br>
+      <br>
+      <a href="/" id=ods2bb class="act btn lft" data-en=" Return to HomePage">Ana Sayfaya dön</a>
+    </div>
   </div>
   <script async type="module" src="/oduller/sayfa.js" data-remove-type></script>
 </body>
