Oduller sayfasi gelistir

--- a/oduller/sayfa.html
+++ b/oduller/sayfa.html
@@ -31,7 +31,7 @@
       <span data-en="Checking your TCKT" data-phantom>TCKT bilgilerinizi kontrol edelim.</span>
       <br>
       <br>
-      <a href="javascript:" id=ods1ab class="act btn lft" data-en="Request Decryption">Cüzdanıma İstek Yolla</a>
+      <a href="javascript:" id=ods1ab class="act btn lft" data-en="Check">Kontrol Et</a>
     </div>
     <div id="ods1bc" class="odstep" style="display:none">
       <b data-en="TCKT">TCKT</b>
@@ -52,13 +52,13 @@
     </div>
     <div id="ods2bc" class="odstep" style="display:none">
       <b data-en="Register">Kayıt</b>
-      <span data-en="You have participated in the campaign before 👍" data-phantom>Kampanyaya daha önce katılmışsınız
-        👍</span>
+      <span id="ods2bt"></span>
       <br>
       <br>
       <a href="/" id=ods2bb class="act btn lft" data-en=" Return to HomePage">Ana Sayfaya dön</a>
     </div>
   </div>
+  <canvas id="odconfetti"  style="display:none"></canvas>
   <script async type="module" src="/oduller/sayfa.js" data-remove-type></script>
 </body>
 
