Fix spacing and format

--- a/oduller/sayfa.html
+++ b/oduller/sayfa.html
@@ -28,10 +28,10 @@
     </div>
     <div id="ods1ac" class="odstep" style="display:none">
       <b data-en="TCKT">TCKT</b>
-      <span data-en="Checking your TCKT" data-phantom>TCKT bilgilerinizi kontrol edelim.</span>
+      <span data-en="Checking your TCKT." data-phantom>TCKT bilgilerinizi kontrol edelim.</span>
       <br>
       <br>
-      <a href="javascript:" id=ods1ab class="act btn lft" data-en="Check">Kontrol Et</a>
+      <a href="javascript:" id=ods1ab class="act btn lft" data-en="Confirm">Onayla</a>
     </div>
     <div id="ods1bc" class="odstep" style="display:none">
       <b data-en="TCKT">TCKT</b>
@@ -43,9 +43,8 @@
     </div>
     <div id="ods2ac" class="odstep" style="display:none">
       <b data-en="Register">Kayıt</b>
-      <span data-en="Congratulations! You can check the details ⬇" data-phantom>Tebrikler! Detayları inceleyebilirsin
-        ⬇</span>
-      <br>
+      <span data-en="Congratulations! You can check the details." data-phantom>Tebrikler! Detayları inceleyebilirsin.
+      </span>
       <br>
       <div id="odtx">Detaylar</div>
       <a href="/" id=ods2ab class="act btn lft" data-en="HomePage">Ana Sayfaya dön</a>
@@ -58,7 +57,7 @@
       <a href="/" id=ods2bb class="act btn lft" data-en=" Return to HomePage">Ana Sayfaya dön</a>
     </div>
   </div>
-  <canvas id="odconfetti"  style="display:none"></canvas>
+  <canvas id="odconfetti" style="display:none"></canvas>
   <script async type="module" src="/oduller/sayfa.js" data-remove-type></script>
 </body>
 
