--- a/oduller/sayfa.html
+++ b/oduller/sayfa.html
@@ -19,7 +19,7 @@
   </div>
   <div id="odpc">
     <div id="ods0c" class="odstep">
-      <b data-en="Connect Wallet">Cüzdan Bağla</b>
+      <b data-en="Connect your wallet">Cüzdanını bağla. </b>
       <span data-en="MetaMask, Rabby or Brave Browser wallet" data-phantom>MetaMask, Rabby veya Brave tarayıcı
         cüzdanı.</span>
       <br>
@@ -27,30 +27,31 @@
       <a href="javascript:" id="ods0b" class="act btn" data-en="Connect Wallet">Cüzdan Bağla</a>
     </div>
     <div id="ods1ac" class="odstep" style="display:none">
-      <b data-en="TCKT">TCKT</b>
-      <span data-en="Checking your TCKT." data-phantom>TCKT bilgilerinizi kontrol edelim.</span>
+      <b data-en="Present TCKT. ">TCKT’ni göster. </b>
+      <span data-en="Checking your TCKT." data-phantom>Bilgilerinizi kontrol edelim.</span>
       <br>
       <br>
       <a href="javascript:" id=ods1ab class="act btn lft" data-en="Confirm">Onayla</a>
     </div>
     <div id="ods1bc" class="odstep" style="display:none">
-      <b data-en="TCKT">TCKT</b>
-      <span data-en="You must have TCKT in order to join" data-phantom>Kampanyaya katılabilmen için TCKT sahibi
+      <b data-en="Present TCKT. ">TCKT’ni göster. </b>
+      <span data-en="You must have TCKT in order to join." data-phantom>Kampanyaya katılabilmen için TCKT sahibi
         olman gerekli.</span>
       <br>
       <br>
       <a href="/al" data-en-href="/get" id=ods1bb class="act btn lft" data-en="Get TCKT">TCKT al</a>
     </div>
     <div id="ods2ac" class="odstep" style="display:none">
-      <b data-en="Register">Kayıt</b>
-      <span data-en="Congratulations! You can check the details." data-phantom>Tebrikler! Detayları inceleyebilirsin.
+      <b data-en="Claim your reward. ">Ödülünü al. </b>
+      <span data-en="Congratulations! Transaction complete. You can check the details." data-phantom>Tebrikler!
+        Ödülünü gönderdik. Detayları inceleyebilirsin.
       </span>
       <br>
-      <div id="odtx">Detaylar</div>
+      <div id="odtx">Detaylar. </div>
       <a href="/" id=ods2ab class="act btn lft" data-en="HomePage">Ana Sayfaya dön</a>
     </div>
     <div id="ods2bc" class="odstep" style="display:none">
-      <b data-en="Register">Kayıt</b>
+      <b data-en="Claim your reward. ">Ödülünü al. </b>
       <span id="ods2bt"></span>
       <br>
       <br>
