Sayfa düzeni iyileştirildi

--- a/oduller/sayfa.html
+++ b/oduller/sayfa.html
@@ -28,7 +28,8 @@
     </div>
     <div id="ods1ac" class="odstep" style="display:none">
       <b data-en="Present TCKT. ">TCKT’ni göster. </b>
-      <span data-en="Checking your TCKT." data-phantom>Bilgilerinizi kontrol edelim.</span>
+      <span data-en="Checking your TCKT." data-phantom>Bağlı olduğun cüzdan ile TCKT’ni decrypt ederek gerçekten sen
+        olup olmadığını anlamamıza yardım et.</span>
       <br>
       <br>
       <a href="javascript:" id=ods1ab class="act btn lft" data-en="Confirm">Onayla</a>
@@ -44,7 +45,8 @@
     <div id="ods2ac" class="odstep" style="display:none">
       <b data-en="Claim your reward. ">Ödülünü al. </b>
       <span data-en="Congratulations! Transaction complete. You can check the details." data-phantom>Tebrikler!
-        Ödülünü gönderdik. Detayları inceleyebilirsin.
+        Ödülünü bağlandığın cüzdanının hesabına gönderdik. Aşağıdaki linke tıklayarak işleminin detaylarını
+        inceleyebilirsin.
       </span>
       <br>
       <div id="odtx">Detaylar. </div>
