--- a/oduller/sayfa.html
+++ b/oduller/sayfa.html
@@ -42,25 +42,28 @@
       <br>
       <a href="/al" data-en-href="/get" id=ods1bb class="act btn lft" data-en="Get TCKT">TCKT al</a>
     </div>
-    <div id="ods2ac" class="odstep" style="display:none">
-      <b data-en="Claim your reward. ">Ödülünü al. </b>
-      <span data-en="Congratulations! Transaction complete. You can check the details." data-phantom>Tebrikler!
-        Ödülünü bağlandığın cüzdanının hesabına gönderdik. Aşağıdaki linke tıklayarak işleminin detaylarını
-        inceleyebilirsin.
-      </span>
-      <br>
-      <div id="odtx">Detaylar. </div>
-      <a href="/" id=ods2ab class="act btn lft" data-en="HomePage">Ana Sayfaya dön</a>
-    </div>
-    <div id="ods2bc" class="odstep" style="display:none">
-      <b data-en="Claim your reward. ">Ödülünü al. </b>
-      <span id="ods2bt"></span>
-      <br>
-      <br>
-      <a href="/" id=ods2bb class="act btn lft" data-en=" Return to HomePage">Ana Sayfaya dön</a>
+    <div class="modal" id="modal">
+      <div id="ods2ac" class="odstep" style="display:none">
+        <b data-en="Claim your reward. ">Ödülünü al. </b>
+        <span data-en="Congratulations! Transaction complete. You can check the details." data-phantom>Tebrikler!
+          Ödülünü cüzdanına gönderdik🥳. Aşağıdaki linke tıklayarak işleminin detaylarını
+          inceleyebilirsin.
+        </span>
+        <br>
+        <div id="odtx">Detaylar. </div>
+        <a href="/" id=ods2ab class="act btn lft" data-en="HomePage">Ana Sayfaya dön</a>
+      </div>
+      <div id="ods2bc" class="odstep" style="display:none">
+        <b data-en="Claim your reward. ">Ödülünü al. </b>
+        <span id="ods2bt"></span>
+        <br>
+        <br>
+        <a href="/" id=ods2bb class="act btn lft" data-en=" Return to HomePage">Ana Sayfaya dön</a>
+      </div>
     </div>
   </div>
   <canvas id="odconfetti" style="display:none"></canvas>
+  <div id="overlay"></div>
   <script async type="module" src="/oduller/sayfa.js" data-remove-type></script>
 </body>
 
