Co-authored-by: Mert Saglam <saglam@users.noreply.github.com>

--- a/oduller/sayfa.html
+++ b/oduller/sayfa.html
@@ -44,20 +44,22 @@
     </div>
     <div class="modal" id="modal">
       <div id="ods2ac" class="odstep" style="display:none">
-        <b data-en="Claim your reward. ">Ödülünü al. </b>
+        <b data-en="Claim your reward.">Ödülünü al. </b>
         <span data-en="Congratulations! Transaction complete. You can check the details." data-phantom>Tebrikler!
           Ödülünü cüzdanına gönderdik🥳. Aşağıdaki linke tıklayarak işleminin detaylarını
-          inceleyebilirsin.
+          inceleyebilirsin. Ayrıca seni <a href="https://discord.com/channels/951587582712639548/973319243544276992"
+            target="_blank" rel="noopener noreferrer" class="discord-link">Discord</a> kanalımıza da bekliyoruz. Orada
+          görüşmek üzere 👋
         </span>
         <br>
-        <div id="odtx">Detaylar. </div>
+        <div id="odtx">Detaylar...</div>
         <a href="/" id=ods2ab class="act btn lft" data-en="HomePage">Ana Sayfaya dön</a>
       </div>
       <div id="ods2bc" class="odstep" style="display:none">
-        <b data-en="Claim your reward. ">Ödülünü al. </b>
+        <b data-en="Claim your reward.">Ödülünü al. </b>
         <span id="ods2bt"></span>
         <br>
-        <br>
+        <div id="odtxf">Detaylar...</div>
         <a href="/" id=ods2bb class="act btn lft" data-en=" Return to HomePage">Ana Sayfaya dön</a>
       </div>
     </div>
