--- a/oduller/sayfa.html
+++ b/oduller/sayfa.html
@@ -28,7 +28,8 @@
     </div>
     <div id="ods1ac" class="odstep" style="display:none">
       <b data-en="Present TCKT. ">TCKT’ni göster. </b>
-      <span data-en="Checking your TCKT." data-phantom>Bilgilerinizi kontrol edelim.</span>
+      <span data-en="Checking your TCKT." data-phantom>Bağlı olduğun cüzdan ile TCKT’ni decrypt ederek gerçekten sen
+        olup olmadığını anlamamıza yardım et.</span>
       <br>
       <br>
       <a href="javascript:" id=ods1ab class="act btn lft" data-en="Confirm">Onayla</a>
@@ -41,24 +42,30 @@
       <br>
       <a href="/al" data-en-href="/get" id=ods1bb class="act btn lft" data-en="Get TCKT">TCKT al</a>
     </div>
-    <div id="ods2ac" class="odstep" style="display:none">
-      <b data-en="Claim your reward. ">Ödülünü al. </b>
-      <span data-en="Congratulations! Transaction complete. You can check the details." data-phantom>Tebrikler!
-        Ödülünü gönderdik. Detayları inceleyebilirsin.
-      </span>
-      <br>
-      <div id="odtx">Detaylar. </div>
-      <a href="/" id=ods2ab class="act btn lft" data-en="HomePage">Ana Sayfaya dön</a>
-    </div>
-    <div id="ods2bc" class="odstep" style="display:none">
-      <b data-en="Claim your reward. ">Ödülünü al. </b>
-      <span id="ods2bt"></span>
-      <br>
-      <br>
-      <a href="/" id=ods2bb class="act btn lft" data-en=" Return to HomePage">Ana Sayfaya dön</a>
+    <div class="modal" id="modal">
+      <div id="ods2ac" class="odstep" style="display:none">
+        <b data-en="Claim your reward.">Ödülünü al. </b>
+        <span data-en="Congratulations! Transaction complete. You can check the details." data-phantom>Tebrikler!
+          Ödülünü cüzdanına gönderdik🥳. Aşağıdaki linke tıklayarak işleminin detaylarını
+          inceleyebilirsin. Ayrıca seni<a href="https://discord.com/channels/951587582712639548/973319243544276992"
+            target="_blank" rel="noopener noreferrer" class="discord-link">Discord</a>kanalımıza da bekliyoruz. Orada
+          görüşmek üzere 👋
+        </span>
+        <br>
+        <div id="odtx">Detaylar...</div>
+        <a href="/" id=ods2ab class="act btn lft" data-en="HomePage">Ana Sayfaya dön</a>
+      </div>
+      <div id="ods2bc" class="odstep" style="display:none">
+        <b data-en="Claim your reward.">Ödülünü al. </b>
+        <span id="ods2bt"></span>
+        <br>
+        <div id="odtxf">Detaylar...</div>
+        <a href="/" id=ods2bb class="act btn lft" data-en=" Return to HomePage">Ana Sayfaya dön</a>
+      </div>
     </div>
   </div>
   <canvas id="odconfetti" style="display:none"></canvas>
+  <div id="overlay"></div>
   <script async type="module" src="/oduller/sayfa.js" data-remove-type></script>
 </body>
 
