--- a/oduller/sayfa.html
+++ b/oduller/sayfa.html
@@ -47,8 +47,8 @@
         <b data-en="Claim your reward.">Ödülünü al. </b>
         <span data-en="Congratulations! Transaction complete. You can check the details." data-phantom>Tebrikler!
           Ödülünü cüzdanına gönderdik🥳. Aşağıdaki linke tıklayarak işleminin detaylarını
-          inceleyebilirsin. Ayrıca seni<a href="https://discord.com/channels/951587582712639548/973319243544276992"
-            target="_blank" rel="noopener noreferrer" class="discord-link">Discord</a>kanalımıza da bekliyoruz. Orada
+          inceleyebilirsin. Ayrıca seni <a href="https://discord.com/channels/951587582712639548/973319243544276992"
+            target="_blank" rel="noopener noreferrer" class="discord-link">Discord</a> kanalımıza da bekliyoruz. Orada
           görüşmek üzere 👋
         </span>
         <br>
@@ -57,7 +57,12 @@
       </div>
       <div id="ods2bc" class="odstep" style="display:none">
         <b data-en="Claim your reward.">Ödülünü al. </b>
-        <span id="ods2bt"></span>
+        <span id="ods2bt"
+          data-en="Oops! We realized that you took your prize before. So, you cannot participate our campaign again. Then, we hope to see you soon in our Discord 👋.">Oops!
+          Fark ettik ki ödülünü daha önceden almışsın. Bundan dolayı kampanyamızdan tekrar
+          yararlanamazsın. O zaman seni <a href="https://discord.com/channels/951587582712639548/973319243544276992"
+            target="_blank" rel="noopener noreferrer" class="discord-link">Discord</a> kanalımıza bekliyoruz. Orada
+          görüşmek üzere 👋</span>
         <br>
         <div id="odtxf">Detaylar...</div>
         <a href="/" id=ods2bb class="act btn lft" data-en=" Return to HomePage">Ana Sayfaya dön</a>
