Sonda görünen linki incele sayfasına yönlendir

--- a/oduller/sayfa.html
+++ b/oduller/sayfa.html
@@ -53,7 +53,7 @@
         </span>
         <br>
         <div id="odtx">Detaylar...</div>
-        <a href="/" id=ods2ab class="act btn lft" data-en="HomePage">Ana Sayfaya dön</a>
+        <a href="/incele" id=ods2ab class="act btn lft" data-en="HomePage">Ana Sayfaya dön</a>
       </div>
       <div id="ods2bc" class="odstep" style="display:none">
         <b data-en="Claim your reward.">Ödülünü al. </b>
@@ -65,7 +65,7 @@
           görüşmek üzere 👋</span>
         <br>
         <div id="odtxf">Detaylar...</div>
-        <a href="/" id=ods2bb class="act btn lft" data-en=" Return to HomePage">Ana Sayfaya dön</a>
+        <a href="/incele" id=ods2bb class="act btn lft" data-en=" Return to HomePage">Ana Sayfaya dön</a>
       </div>
     </div>
   </div>
